(system) added proto to new cmake setup

--- a/Plugins/CMakeLists.txt
+++ b/Plugins/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(VU)
 add_subdirectory(ClickBox)
 add_subdirectory(Pisstortion)
 add_subdirectory(PNCH)
+add_subdirectory(Proto)
 add_subdirectory("Red Bass")
 add_subdirectory(MPaint)
 add_subdirectory(CRMBL)
