--- a/.github/workflows/VU_build.yml
+++ b/.github/workflows/VU_build.yml
@@ -198,15 +198,15 @@ jobs:
         xcrun notarytool submit "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_vst3.zip" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
         xcrun notarytool submit "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_clap.zip" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
         xcrun notarytool submit "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_standalone.zip" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
-        unzip "Setup/${{ matrix.folder }}/free/${{ env.plug }}_vst3.zip"
-        unzip "Setup/${{ matrix.folder }}/free/${{ env.plug }}_clap.zip"
-        unzip "Setup/${{ matrix.folder }}/free/${{ env.plug }}_standalone.zip"
-        rm "Setup/${{ matrix.folder }}/free/${{ env.plug }}_vst3.zip"
-        rm "Setup/${{ matrix.folder }}/free/${{ env.plug }}_clap.zip"
-        rm "Setup/${{ matrix.folder }}/free/${{ env.plug }}_standalone.zip"
-        xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.plug }}.vst3"
-        xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.plug }}.clap"
-        xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.plug }}.app"
+        unzip "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_vst3.zip"
+        unzip "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_clap.zip"
+        unzip "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_standalone.zip"
+        rm "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_vst3.zip"
+        rm "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_clap.zip"
+        rm "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_standalone.zip"
+        xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.vst3"
+        xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.clap"
+        xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.app"
 
     - uses: actions/upload-artifact@v3
       with:
