--- a/.github/workflows/RedBass_build.yml
+++ b/.github/workflows/RedBass_build.yml
@@ -30,7 +30,7 @@ jobs:
           }
         - {
             name: "Linux",
-            os: ubuntu-latest,
+            os: ubuntu-20.04,
             compiler: "Unix Makefiles",
             folder: "build_linux"
           }
