(system) shared resources

--- a/Plugins/Prisma/CMakeLists.txt
+++ b/Plugins/Prisma/CMakeLists.txt
@@ -28,10 +28,10 @@ clap_juce_extensions_plugin(TARGET "${BaseTargetName}"
 	CLAP_USE_JUCE_PARAMETER_RANGES ALL)
 
 target_sources("${BaseTargetName}" PRIVATE
-	Source/CoolLogger.cpp
 	Source/DCFilter.cpp
 	Source/PluginEditor.cpp
-	Source/PluginProcessor.cpp)
+	Source/PluginProcessor.cpp
+	../../Shared/Source/CoolLogger.cpp)
 
 target_compile_definitions("${BaseTargetName}" PUBLIC
 	JUCE_DISPLAY_SPLASH_SCREEN=0
@@ -49,12 +49,12 @@ target_compile_definitions("${BaseTargetName}" PUBLIC
 	JUCE_USE_CAMERA=0)
 
 juce_add_binary_data("${BaseTargetName}BinaryData" HEADER_NAME BinaryData.h NAMESPACE BinaryData SOURCES
-	Resources/banner.png
 	Resources/base.png
-	Resources/dbg_txt.png
 	Resources/elements.png
 	Resources/modules.png
-	Resources/selector.png)
+	Resources/selector.png
+	../../Shared/Resources/banner.png
+	../../Shared/Resources/dbg_txt.png)
 set_target_properties("${BaseTargetName}BinaryData" PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
 target_link_libraries("${BaseTargetName}" PRIVATE
