--- a/Plugins/ClickBox/CMakeLists.txt
+++ b/Plugins/ClickBox/CMakeLists.txt
@@ -28,10 +28,10 @@ clap_juce_extensions_plugin(TARGET "${BaseTargetName}"
 	CLAP_USE_JUCE_PARAMETER_RANGES ALL)
 
 target_sources("${BaseTargetName}" PRIVATE
-	Source/CoolLogger.cpp
 	Source/perlin.cpp
 	Source/PluginEditor.cpp
-	Source/PluginProcessor.cpp)
+	Source/PluginProcessor.cpp
+	../../Shared/Source/CoolLogger.cpp)
 
 target_compile_definitions("${BaseTargetName}" PUBLIC
 	JUCE_DISPLAY_SPLASH_SCREEN=0
@@ -51,8 +51,8 @@ target_compile_definitions("${BaseTargetName}" PUBLIC
 juce_add_binary_data("${BaseTargetName}BinaryData" HEADER_NAME BinaryData.h NAMESPACE BinaryData SOURCES
 	Resources/credits.png
 	Resources/cursor.png
-	Resources/dbg_txt.png
-	Resources/tex.png)
+	Resources/tex.png
+	../../Shared/Resources/dbg_txt.png)
 set_target_properties("${BaseTargetName}BinaryData" PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
 target_link_libraries("${BaseTargetName}" PRIVATE
