--- a/Plugins/Red Bass/CMakeLists.txt
+++ b/Plugins/Red Bass/CMakeLists.txt
@@ -29,10 +29,10 @@ clap_juce_extensions_plugin(TARGET "${BaseTargetName}"
 	CLAP_USE_JUCE_PARAMETER_RANGES ALL)
 
 target_sources("${BaseTargetName}" PRIVATE
-	Source/CoolLogger.cpp
 	Source/envelopefollower.cpp
 	Source/PluginEditor.cpp
-	Source/PluginProcessor.cpp)
+	Source/PluginProcessor.cpp
+	../../Shared/Source/CoolLogger.cpp)
 
 target_compile_definitions("${BaseTargetName}" PUBLIC
 	JUCE_DISPLAY_SPLASH_SCREEN=0
@@ -50,10 +50,10 @@ target_compile_definitions("${BaseTargetName}" PUBLIC
 	JUCE_USE_CAMERA=0)
 
 juce_add_binary_data("${BaseTargetName}BinaryData" HEADER_NAME BinaryData.h NAMESPACE BinaryData SOURCES
-	Resources/banner.png
 	Resources/base.png
-	Resources/dbg_txt.png
-	Resources/txt.png)
+	Resources/txt.png
+	../../Shared/Resources/banner.png
+	../../Shared/Resources/dbg_txt.png)
 set_target_properties("${BaseTargetName}BinaryData" PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
 target_link_libraries("${BaseTargetName}" PRIVATE
