--- a/.github/workflows/Prisma_build.yml
+++ b/.github/workflows/Prisma_build.yml
@@ -83,6 +83,12 @@ jobs:
         cmake --build "${{matrix.folder}}" --config Release --target ${{env.NOSPACE}}_VST3
         cmake --build "${{matrix.folder}}" --config Release --target ${{env.NOSPACE}}_CLAP
 
+    - name: (mac) build
+      if: startsWith(matrix.os, 'macos')
+      id: build_mac
+      run: |
+        cmake --build "${{matrix.folder}}" --config Release --target ${{env.NOSPACE}}_AU
+
     - name: (windows) package
       if: startsWith(matrix.os, 'windows')
       id: package_windows
@@ -110,18 +116,25 @@ jobs:
       run: |
         codesign --force -s "${{ secrets.DEVELOPER_ID_APPLICATION }}" -v "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.vst3" --deep --strict --options=runtime --timestamp
         codesign --force -s "${{ secrets.DEVELOPER_ID_APPLICATION }}" -v "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.clap" --deep --strict --options=runtime --timestamp
+        codesign --force -s "${{ secrets.DEVELOPER_ID_APPLICATION }}" -v "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component" --deep --strict --options=runtime --timestamp
         zip -r "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_vst3.zip" "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.vst3"
         zip -r "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_clap.zip" "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.clap"
+        zip -r "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_au.zip" "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component"
         rm -r "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.vst3"
         rm -r "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.clap"
+        rm -r "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component"
         xcrun notarytool submit "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_vst3.zip" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
         xcrun notarytool submit "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_clap.zip" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
+        xcrun notarytool submit "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_au.zip" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
         unzip "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_vst3.zip"
         unzip "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_clap.zip"
+        unzip "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_au.zip"
         rm "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_vst3.zip"
         rm "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_clap.zip"
+        rm "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}_au.zip"
         xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.vst3"
         xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.clap"
+        xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component"
 
     - uses: actions/upload-artifact@v3
       with:
@@ -145,6 +158,12 @@ jobs:
       run: |
         cmake --build "${{matrix.folder}}" --config Release --target ${{env.NOSPACE}}_VST3
         cmake --build "${{matrix.folder}}" --config Release --target ${{env.NOSPACE}}_CLAP
+
+    - name: (mac) build free
+      if: startsWith(matrix.os, 'macos')
+      id: build_mac_free
+      run: |
+        cmake --build "${{matrix.folder}}" --config Release --target ${{env.NOSPACE}}_AU
 
     - name: (windows) package free
       if: startsWith(matrix.os, 'windows')
@@ -173,18 +192,25 @@ jobs:
       run: |
         codesign --force -s "${{ secrets.DEVELOPER_ID_APPLICATION }}" -v "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.vst3" --deep --strict --options=runtime --timestamp
         codesign --force -s "${{ secrets.DEVELOPER_ID_APPLICATION }}" -v "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.clap" --deep --strict --options=runtime --timestamp
+        codesign --force -s "${{ secrets.DEVELOPER_ID_APPLICATION }}" -v "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.component" --deep --strict --options=runtime --timestamp
         zip -r "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_vst3.zip" "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.vst3"
         zip -r "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_clap.zip" "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.clap"
+        zip -r "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_au.zip" "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.component"
         rm -r "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.vst3"
         rm -r "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.clap"
+        rm -r "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.component"
         xcrun notarytool submit "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_vst3.zip" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
         xcrun notarytool submit "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_clap.zip" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
+        xcrun notarytool submit "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_au.zip" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
         unzip "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_vst3.zip"
         unzip "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_clap.zip"
+        unzip "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_au.zip"
         rm "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_vst3.zip"
         rm "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_clap.zip"
+        rm "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}_au.zip"
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.vst3"
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.clap"
+        xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.component"
 
     - uses: actions/upload-artifact@v3
       with:
