--- a/.github/workflows/CRMBL_build.yml
+++ b/.github/workflows/CRMBL_build.yml
@@ -8,9 +8,11 @@ on:
   push:
     paths:
       - '**CRMBL**'
+      - 'rebuild_all.txt'
   pull_request:
     paths:
       - '**CRMBL**'
+      - 'rebuild_all.txt'
     branches:
       - master
 
