--- a/.github/workflows/ClickBox_build.yml
+++ b/.github/workflows/ClickBox_build.yml
@@ -8,9 +8,11 @@ on:
   push:
     paths:
       - '**ClickBox**'
+      - 'rebuild_all.txt'
   pull_request:
     paths:
       - '**ClickBox**'
+      - 'rebuild_all.txt'
     branches:
       - master
 
