--- a/.github/workflows/Pisstortion_build.yml
+++ b/.github/workflows/Pisstortion_build.yml
@@ -8,9 +8,11 @@ on:
   push:
     paths:
       - '**Pisstortion**'
+      - 'rebuild_all.txt'
   pull_request:
     paths:
       - '**Pisstortion**'
+      - 'rebuild_all.txt'
     branches:
       - master
 
