--- a/.github/workflows/Prisma_build.yml
+++ b/.github/workflows/Prisma_build.yml
@@ -8,9 +8,11 @@ on:
   push:
     paths:
       - '**Prisma**'
+      - 'rebuild_all.txt'
   pull_request:
     paths:
       - '**Prisma**'
+      - 'rebuild_all.txt'
     branches:
       - master
 
