(sunburnt) ui stage 1

--- a/Plugins/CMakeLists.txt
+++ b/Plugins/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory("Red Bass")
 add_subdirectory(MPaint)
 add_subdirectory(CRMBL)
 add_subdirectory(Prisma)
+add_subdirectory(SunBurnt)
