--- a/.github/workflows/Prisma_build.yml
+++ b/.github/workflows/Prisma_build.yml
@@ -138,11 +138,6 @@ jobs:
         xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.clap"
         xcrun stapler staple "Setup/${{ matrix.folder }}/paid/${{ env.PLUG }}.component"
 
-    - uses: actions/upload-artifact@v3
-      with:
-        name: ${{env.PLUG}} ${{ matrix.name }}
-        path: Setup/${{matrix.folder}}/paid
-
     - name: (windows) configure free
       if: startsWith(matrix.os, 'windows')
       id: configure_windows_free
@@ -214,11 +209,6 @@ jobs:
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.clap"
         xcrun stapler staple "Setup/${{ matrix.folder }}/free/${{ env.PLUG }}.component"
 
-    - uses: actions/upload-artifact@v3
-      with:
-        name: ${{env.PLUG}} Free ${{ matrix.name }}
-        path: Setup/${{matrix.folder}}/free
-
     - name: (windows) build installer
       if: startsWith(matrix.os, 'windows')
       id: installer
@@ -226,16 +216,19 @@ jobs:
         cd Setup
         iscc "${{env.PLUG}}.iss"
         iscc "${{env.PLUG}} Free.iss"
+        mkdir "${{matrix.folder}}/paid/Manual Install"
+        mkdir "${{matrix.folder}}/free/Manual Install"
+        mv "${{matrix.folder}}/paid/*.*" "${{matrix.folder}}/paid/Manual Install"
+        mv "${{matrix.folder}}/free/*.*" "${{matrix.folder}}/free/Manual Install"
+        mv "Output/${{env.PLUG}} Installer.exe" "${{matrix.folder}}/paid"
+        mv "Output/${{env.PLUG}} Free Installer.exe" "${{matrix.folder}}/free"
 
     - uses: actions/upload-artifact@v3
-      if: startsWith(matrix.os, 'windows')
       with:
-        name: ${{env.PLUG}} Installer
-        path: "Setup/Output/${{env.PLUG}} Installer.exe"
+        name: ${{env.PLUG}} ${{ matrix.name }}
+        path: Setup/${{matrix.folder}}/paid
 
     - uses: actions/upload-artifact@v3
-      if: startsWith(matrix.os, 'windows')
       with:
-        name: ${{env.PLUG}} Free Installer
-        path: "Setup/Output/${{env.PLUG}} Free Installer.exe"
-
+        name: ${{env.PLUG}} Free ${{ matrix.name }}
+        path: Setup/${{matrix.folder}}/free
